# bazel-tooling

./: .gitignore  LICENSE  MODULE.bazel  README.md
.github/: renovate.json
.github/workflows/: bazel-diff.yaml  renovate.yaml
bazel/diff/: BUILD.bazel
